[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full", "io-std"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls", "rustls", "tokio-rustls"] }
